@@ -8,6 +8,8 @@ This file documents the revision history for Phonebook.
           hard coding use of uflEduUniversityId
         - Use uflEduPsDeptId instead of uflEduUniversityId for units,
           since that's now part of the DN
+        - When searching for people in a unit, and only one person
+          exists in the unit, redirect correctly to that person
 
 0.18  Tue Aug  1 17:49:04 EDT 2006
         - Fix searches which include a middle name
